name:               aula
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          aula
  main-is:          Main.hs
  other-modules:    Foundation
                    Application
                    Handler.Aluno
                    Handler.Disciplina
                    Handler.Usuario
                    
  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , yesod-static
                , text                          
                , persistent                    
                , persistent-postgresql
                , monad-logger

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
